--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -4,15 +4,13 @@
 %---What methodology we used---
 
 We analyze the possibility of automatically transform a BPEL written process in a Java executable routine, with minimum ad-hoc developer’s intervention. Our final objective is to show the feasibility of a semi-automated transformation from a small business process orchestrated with BPEL to the Java language.
-%\fxnote{ commenti Stefano sulla struttura}
-\STE{This section describes the steps we adopted to realize our goal. The following list summarizes the contents described in this Section.}
-% (* = testo già scritto)
+This section describes the steps we adopted to realize our goal. The following list summarizes the contents described in this Section.
 
 \begin{itemize}
- \item \STE{Formalization of the languages involved in transformation}
- \item \STE{Description of the used approaches: Programming vs Code Generation vs Model Driven Architecture).}
- \item \STE{Choosing of specific MDA technique (M2M, M2T) that allows us to manipulate the BPEL input model and that is compatible with a ready to run code output.}
- \item \STE{General overview of the methodological approach presented with an overview diagram.}
+ \item Formalization of the languages involved in the transformation
+ \item Description of the used approach: Programming vs Code Generation vs Model Driven Architecture).
+ \item Choice of the specific MDA technique (M2M, M2T) that allows us to manipulate the BPEL input model and that is compatible with a ready to run code output.
+ \item General outline of the methodological approach presented with an overview diagram.
 \end{itemize}  
 
 Once these steps have been accomplished, we focus on providing more details on how we carry out the transformation in the next section concerning the detailed architecture.
@@ -21,11 +19,11 @@ Once these steps have been accomplished, we focus on providing more details on h
 
 \subsection{Languages involved in transformation} 
 \label{sec:TransfDomain}
-\STE{In our transformation we are dealing with BPEL, that is a generic language. Notwtihstanding, since it has an XML-based concrete syntax, we deal with it as a DSL (Domain Specific Language) in order to apply M2M and M2T techniques. Java, on the other hand, is a multipurpose (textual) language.}
+In our transformation we are dealing with BPEL, that is a generic language. Notwithstanding, since it has an XML-based concrete syntax, we deal with it as a DSL (Domain Specific Language) in order to apply M2M and M2T techniques. Java, on the other hand, is a multipurpose (textual) language.
 Having to work with a model produced with a DSL means that we don't have to take care of the general constructs and ideas that are present in a generic language. The language is already skimmed to contain what is necessary to orchestrate business processes.
 Concerning the output language, Java, it is not a DSL but a multipurpose language. Thus, it has no constraints on which kind of process or solution we could implement with it. %Most importantly, the fact the input model is produced in a DSL  
 
-\subsection{The chosen approach}
+\subsection{The methodological approach}
 \label{sec:ProgrammingVsMDE}
 To realize the transformation, many possibilities arise; from a very specific, custom solution, to a more broad and abstract approach. The possibilities could be generalized in three main families: a manual ad-hoc programming solution, a code generation automation or a model driven architecture abstraction.
   \subsubsection{Ad-hoc Programming solution}
